--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -1,9 +1,9 @@
-name: 'Upstream Sync'
+name: "Upstream Sync"
 
 on:
   schedule:
-    - cron:  '0 7 * * *' # chạy mỗi ngày lúc 7:00 UTC (14:00 VN)
-  workflow_dispatch: # có thể bấm nút chạy thủ công
+    - cron: "0 1,6 * * *" # runs at 01:00 and 06:00 UTC (08:00 and 13:00 VN time)
+  workflow_dispatch: # allow manual trigger
 
 jobs:
   sync_latest_from_upstream:
@@ -11,35 +11,35 @@ jobs:
     name: Sync latest commits from upstream repo
 
     permissions:
-      contents: write # quan trọng: cho phép workflow push code
+      contents: write # important: allow workflow to push code
 
     steps:
-    # Bước 1: Checkout repo hiện tại
-    - name: Checkout target repo
-      uses: actions/checkout@v3
-      with:
-        ref: main
-        persist-credentials: false
+      # Step 1: Checkout target repo
+      - name: Checkout target repo
+        uses: actions/checkout@v3
+        with:
+          ref: main
+          persist-credentials: false
 
-    # Bước 2: Chạy action sync
-    - name: Sync upstream changes
-      id: sync
-      uses: aormsby/Fork-Sync-With-Upstream-action@v3.4.1
-      with:
-        target_sync_branch: main
-        # Token mặc định của Github Actions
-        target_repo_token: ${{ secrets.GITHUB_TOKEN }}
-        upstream_sync_repo: router-for-me/CLIProxyAPIPlus
-        upstream_sync_branch: main
-        
-        # Cái này để test, set false để chạy thật
-        test_mode: false
-      
-    # Bước 3: Log kết quả
-    - name: New commits found
-      if: steps.sync.outputs.has_new_commits == 'true'
-      run: echo "New commits were found to sync."
-    
-    - name: No new commits
-      if: steps.sync.outputs.has_new_commits == 'false'
-      run: echo "There were no new commits."
+      # Step 2: Run sync action
+      - name: Sync upstream changes
+        id: sync
+        uses: aormsby/Fork-Sync-With-Upstream-action@v3.4.1
+        with:
+          target_sync_branch: main
+          # Standard GitHub Action token
+          target_repo_token: ${{ secrets.GITHUB_TOKEN }}
+          upstream_sync_repo: router-for-me/CLIProxyAPIPlus
+          upstream_sync_branch: main
+
+          # Set to false to actually sync
+          test_mode: false
+
+      # Step 3: Log results
+      - name: New commits found
+        if: steps.sync.outputs.has_new_commits == 'true'
+        run: echo "New commits were found to sync."
+
+      - name: No new commits
+        if: steps.sync.outputs.has_new_commits == 'false'
+        run: echo "There were no new commits."
